add admin userrole, groups to context and basic admin route
